--- a/index.html
+++ b/index.html
@@ -1,235 +1,141 @@
+
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>HOWTO: SVG</title>
+	<title>HOWTO: SVG Icons</title>
 
 	<link rel="stylesheet" href="style.css">
+	
 </head>
-
 <body>
+	<nav>
+		<ul>
+			<li><a href="#home"><svg id="coffee" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+  <defs>
+    <style>
+      .cls-1 {
+        fill: #fff;
+      }
 
-	<style>
-		* {
-			margin: 0 auto;
-			text-align: center;
-		}
-		body {
-			background-color: aquamarine;
-		}
-		p {
-			font-size: 2em;
-		}
-		p + * {
-			margin-bottom: 4em;
-		}
-		img, object, embed, svg {
-			max-width: 20em;
-		}
-		path {
-			/* fill: green !important; */
-		}
-	</style>
+      .cls-2 {
+        fill: #1a1a18;
+      }
+    </style>
+  </defs>
+  <title>coffee</title>
+  <g>
+    <path class="cls-1" d="M148.11,231c14.84-26-33.79-65.35-33.79-65.35S71.52,134,91,106.53c22-30,53.65-12.77,69.94,8s48.54,39.6,57.8,1.6S194.15,8.17,265,14.88s35.77,70.89,23.63,91.33,24.27,35.13,56.53,21.08S389,135,380.64,155.71c-4.95,12.77-2.67,35.21,22.2,32.09,22.89-2.87,34.65,28.26,8.33,39.85-8.79,3.87-32.53,5.65-52.26,3.41C279.89,304,178.29,272.91,148.11,231Z"/>
+    <g>
+      <path class="cls-2" d="M371.78,271.06V244.61c1.83.06,3.58.2,5.44.2,6.26,0,27.55-.39,39.1-5.47,16.7-7.35,25.32-22.41,22-38.36-3.54-16.82-18.83-28.13-37-25.85a22.83,22.83,0,0,1-2.89.19c-4.31,0-5.28-1.42-5.65-1.94-1.83-2.68-1.9-8.54-.2-12.93,5.35-13.35,4.55-27.23-2.14-37.08-9.46-14-28.37-17.35-50.26-7.79a53.76,53.76,0,0,1-21.32,4.48c-12.17,0-19.06-4.4-19.73-5.94a4.31,4.31,0,0,1,.61-1.39C320.61,77.44,326.1,49.44,316,29.5c-8-15.78-24.75-25-49.71-27.34-3.64-.34-7-.5-10.19-.5-16.59,0-29.32,4.63-37.83,13.75-14.75,15.82-13.07,39.76-11.46,62.92.88,12.59,1.79,25.62-.45,34.76-1.95,8-4.81,12.11-8.48,12.11-7,0-18.54-8-26.85-18.57-14.26-18.17-33.53-29-51.56-29-10.51,0-25.76,3.71-38.84,21.54-21.1,29.74,6.5,62.24,25.69,76.4,14,11.34,37.41,37.39,30.74,49.08h0a12.78,12.78,0,0,0-1.27,3.24,10.33,10.33,0,0,0-.17,1.26,12.38,12.38,0,0,0-.24,1.83V471.28a12.77,12.77,0,0,0,6.64,11.2c33.3,18.23,69.6,27.86,105,27.86,2.32,0,4.62,0,6-.12,2.28.08,4.59.12,6.91.12,35.61,0,72-9.64,105.31-27.86a12.76,12.76,0,0,0,6.63-11.2V426.59c35-2.59,62.79-36.43,62.79-77.77S406.77,273.64,371.78,271.06Zm-11.3-52.67a12.54,12.54,0,0,0-2.67,0,3.27,3.27,0,0,0-.45,0,12.56,12.56,0,0,0-2.19.47c-.29.09-.55.21-.83.32a11.44,11.44,0,0,0-1.47.57,191.32,191.32,0,0,1-91.63,23c-2.48,0-4.95,0-8.31-.13-2.44.08-4.88.13-7.37.13a191.83,191.83,0,0,1-82.21-18.35c3.66-31.34-35.92-64.59-41.44-69-.33-.24-32.19-24.91-20.61-41.26,5.4-7.35,11.33-10.93,18.13-10.93,9.93,0,22.29,7.56,31.46,19.25,10.76,13.71,28.74,28.35,47,28.35,7.71,0,26.36-3.08,33.31-31.62,3.17-13,2.12-28,1.1-42.59-1.23-17.7-2.5-36,4.66-43.71,4.4-4.71,13.56-6.5,26.93-5.23,15.68,1.48,25.55,6,29.34,13.48,3.33,6.54,5.74,22.85-15.49,58.61-5.24,8.83-5.54,18.65-.83,26.93,6.66,11.71,22.73,19,41.92,19A79.52,79.52,0,0,0,350.3,139c6.46-2.81,10.79-3.4,13.3-3.4,4.19,0,5.26,1.58,5.61,2.1,1.53,2.25,2,7.23-.48,13.4-3.7,9.58-5.17,24.94,2.89,36.72,5.77,8.42,15.26,13.05,26.73,13.05a48.45,48.45,0,0,0,6.07-.38c5-.63,8.19,2.55,8.87,5.77,1.08,5.19-4.08,8.31-7.27,9.7-2.9,1.29-13.29,3.32-28.8,3.32A152.72,152.72,0,0,1,360.48,218.39Zm11.3,182.36V296.91c20.86,2.74,37.25,24.82,37.25,51.91S392.64,398,371.78,400.75Z"/>
+      <circle class="cls-2" cx="164.13" cy="184.13" r="7.66"/>
+      <circle class="cls-2" cx="148.8" cy="153.47" r="7.66"/>
+      <circle class="cls-2" cx="133.48" cy="122.82" r="7.66"/>
+      <circle class="cls-2" cx="194.79" cy="184.13" r="7.66"/>
+      <circle class="cls-2" cx="210.12" cy="214.79" r="7.66"/>
+      <circle class="cls-2" cx="179.46" cy="214.79" r="7.66"/>
+      <circle class="cls-2" cx="240.77" cy="214.79" r="7.66"/>
+      <circle class="cls-2" cx="271.43" cy="214.79" r="7.66"/>
+      <circle class="cls-2" cx="302.09" cy="214.79" r="7.66"/>
+      <circle class="cls-2" cx="317.41" cy="184.13" r="7.66"/>
+      <circle class="cls-2" cx="332.74" cy="214.79" r="7.66"/>
+      <circle class="cls-2" cx="348.07" cy="184.13" r="7.66"/>
+    </g>
+  </g>
+</svg>
+<span>Home</span></a></li>
+			<li><a href="#home"><svg id="headphones" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+  <defs>
+    <style>
+      .cls-1 {
+        fill: #fff;
+      }
 
-	<p>Img</p>
-	<img src="example.svg" alt="Cats">
+      .cls-2 {
+        fill: #1a1a18;
+      }
+    </style>
+  </defs>
+  <title>headphones</title>
+  <g>
+    <g>
+      <path class="cls-1" d="M144.69,268.27l-57.5,10.14c-27.14,4.78-40.44,58-29.71,118.84s41.43,106.3,68.57,101.51l57.49-10.14c27.14-4.79,40.45-58,29.72-118.84S171.83,263.48,144.69,268.27Z"/>
+      <path class="cls-1" d="M424.8,278.41l-57.49-10.14c-27.14-4.79-57.84,40.66-68.57,101.51s2.57,114.05,29.71,118.84L386,498.76c27.14,4.79,57.84-40.66,68.57-101.51S451.94,283.19,424.8,278.41Z"/>
+    </g>
+    <g>
+      <path class="cls-2" d="M357.84,401.07a6.36,6.36,0,1,0,5.17,7.36A6.35,6.35,0,0,0,357.84,401.07Z"/>
+      <path class="cls-2" d="M332.78,396.65a6.36,6.36,0,1,0,5.16,7.37A6.36,6.36,0,0,0,332.78,396.65Z"/>
+      <path class="cls-2" d="M371.85,358.31a6.37,6.37,0,1,0-7.37,5.16A6.38,6.38,0,0,0,371.85,358.31Z"/>
+      <path class="cls-2" d="M346.78,353.89a6.36,6.36,0,1,0-7.36,5.17A6.37,6.37,0,0,0,346.78,353.89Z"/>
+      <path class="cls-2" d="M374.79,378.22a6.36,6.36,0,1,0,5.17,7.36A6.34,6.34,0,0,0,374.79,378.22Z"/>
+      <path class="cls-2" d="M354.89,381.17a6.36,6.36,0,1,0-7.36,5.16A6.36,6.36,0,0,0,354.89,381.17Z"/>
+      <path class="cls-2" d="M329.83,376.75a6.36,6.36,0,1,0-7.37,5.15A6.35,6.35,0,0,0,329.83,376.75Z"/>
+      <path class="cls-2" d="M151.44,408.43a6.37,6.37,0,1,0,5.17-7.36A6.37,6.37,0,0,0,151.44,408.43Z"/>
+      <path class="cls-2" d="M176.51,404a6.36,6.36,0,1,0,5.17-7.37A6.36,6.36,0,0,0,176.51,404Z"/>
+      <path class="cls-2" d="M150,363.47a6.36,6.36,0,1,0-7.37-5.16A6.34,6.34,0,0,0,150,363.47Z"/>
+      <path class="cls-2" d="M175,359.06a6.37,6.37,0,1,0-7.36-5.17A6.36,6.36,0,0,0,175,359.06Z"/>
+      <path class="cls-2" d="M141.86,390.74a6.36,6.36,0,1,0-7.37-5.16A6.35,6.35,0,0,0,141.86,390.74Z"/>
+      <path class="cls-2" d="M166.93,386.33a6.36,6.36,0,1,0-7.37-5.16A6.35,6.35,0,0,0,166.93,386.33Z"/>
+      <path class="cls-2" d="M192,381.9a6.36,6.36,0,1,0-7.36-5.15A6.35,6.35,0,0,0,192,381.9Z"/>
+      <path class="cls-2" d="M489.08,330.91A238.26,238.26,0,0,0,426.66,100l11.45-12.69a10.6,10.6,0,0,0-.7-14.91A265,265,0,0,0,81.27,69.66a10.6,10.6,0,0,0-.81,15L91.83,97.27A238.09,238.09,0,0,0,25.44,326.61c-10.72,16.52-14.52,45.19-8.77,77.83,8,45.55,30.22,77.35,53.94,77.35h0a25.28,25.28,0,0,0,4.51-.39l3.34-.59h0c13,18.14,28.21,28.89,43.62,28.9a33.37,33.37,0,0,0,5.81-.51l57.49-10.14c34-6,50.44-62.36,38.32-131.12-12-68-47.08-116.09-80.85-110.12L85.35,268C68,271,55.25,287.29,48.5,311.58l-3.22.57a23.37,23.37,0,0,0-2.87.78A219.14,219.14,0,0,1,105,111.84l9.58,10.6a10.59,10.59,0,0,0,14.91.82A193,193,0,0,1,389,125.78a10.61,10.61,0,0,0,7.19,2.82,3.85,3.85,0,0,0,.48,0A10.58,10.58,0,0,0,404,125.1l9.48-10.5A219.14,219.14,0,0,1,473,314.2a25.16,25.16,0,0,0-6.23-2.05l-3.23-.57C456.75,287.29,444,271,426.64,268l-57.49-10.14a34.28,34.28,0,0,0-5.81-.51c-32.18,0-63.74,46.53-75,110.63-12.12,68.76,4.35,125.13,38.33,131.12l57.49,10.14a33.28,33.28,0,0,0,5.81.51c15.41,0,30.65-10.75,43.62-28.9h0l3.33.59a25.36,25.36,0,0,0,4.51.39c23.73,0,45.91-31.8,53.94-77.35C500.6,374.48,497.85,347.86,489.08,330.91Zm-342.55-52.2a11.61,11.61,0,0,1,2.12-.19c18.23,0,44.34,37.41,54.16,93.1C212.88,428.7,200,475,181.7,478.17a11.64,11.64,0,0,1-2.13.19c-18.22,0-44.34-37.4-54.15-93.09C115.35,328.19,128.26,281.93,146.53,278.71ZM89,288.85l23.15-4.08C100.48,308.83,97,346.51,104.52,389c7.43,42.11,23.62,76.53,43,95.26l-23.28,4.1a11.8,11.8,0,0,1-2.13.19c-18.23,0-44.34-37.41-54.16-93.09C57.86,338.33,70.76,292.07,89,288.85ZM332.42,478.36a11.8,11.8,0,0,1-2.13-.19C312,475,299.12,428.7,309.18,371.62c9.82-55.69,35.93-93.1,54.16-93.1a11.72,11.72,0,0,1,2.13.19c18.27,3.22,31.18,49.48,21.11,106.56C376.76,441,350.65,478.36,332.42,478.36Zm111.65-82.95c-9.81,55.69-35.93,93.09-54.15,93.09a11.8,11.8,0,0,1-2.13-.19l-23.28-4.1c19.34-18.73,35.54-53.15,43-95.26,7.48-42.44,4-80.12-7.65-104.18L423,288.85C441.23,292.07,454.14,338.33,444.07,395.41Z"/>
+    </g>
+  </g>
+</svg>
+<span>Muziek</span></a></li>
+			<li><a href="#home"><svg id="calendar" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+  <defs>
+    <style>
+      .cls-1 {
+        fill: #fff;
+      }
 
-	<p>Object</p>
-	<object data="example.svg" type="image/svg+xml"></object>
+      .cls-2 {
+        fill: #030304;
+      }
+    </style>
+  </defs>
+  <title>calendar</title>
+  <g>
+    <polygon class="cls-1" points="497.63 10.78 14.37 10.78 14.37 501.22 359.3 501.22 497.63 362.9 497.63 10.78"/>
+    <g>
+      <path class="cls-2" d="M228.59,286.16c10.93-9.53,16.46-22.5,16.46-38.65,0-40.28-36.47-54.57-67.7-54.57-24.5,0-47.11,10.34-63.68,29.11a4.65,4.65,0,0,0,.2,6.37l24.94,25a4.77,4.77,0,0,0,3.56,1.35,4.64,4.64,0,0,0,3.39-1.76c8.81-11.18,18.27-15.74,32.63-15.74,11.38,0,19,5.58,19,13.88,0,3.88,0,15.68-27.77,15.68H157.56a4.66,4.66,0,0,0-4.66,4.65V307a4.66,4.66,0,0,0,4.66,4.66h14.9c19.62,0,29.57,5.53,29.57,16.44,0,11.74-12.21,15.92-23.64,15.92-14.51,0-26.7-6.07-36.24-18.05a4.67,4.67,0,0,0-3.39-1.75,4.52,4.52,0,0,0-3.56,1.37l-25.74,26a4.66,4.66,0,0,0-.3,6.21c15.12,18.55,41.68,30.54,67.69,30.55,43.41,0,72.57-23.8,72.57-59.21C249.42,308.35,239.52,294,228.59,286.16Z"/>
+      <path class="cls-2" d="M508.28,363.55c0-.22.13-.43.13-.65V10.78A10.77,10.77,0,0,0,497.63,0H14.37A10.77,10.77,0,0,0,3.59,10.78V501.22A10.77,10.77,0,0,0,14.37,512H359.3a11,11,0,0,0,7.63-3.15L505.26,370.52a10.73,10.73,0,0,0,2.11-3.16,8.29,8.29,0,0,0,.35-1A10.46,10.46,0,0,0,508.28,363.55ZM25.14,123.36H486.86V352l-70.61-.62v-5.86a4.66,4.66,0,0,0-4.66-4.66h-37.8V200.41a4.66,4.66,0,0,0-4.66-4.65H334.66a4.67,4.67,0,0,0-4.19,2.62C321.44,217,297,220,286.86,220.46a4.67,4.67,0,0,0-4.46,4.66v34.22a4.66,4.66,0,0,0,4.66,4.65c14.35,0,28.46-2.94,39.35-8.05v84.95H287.06a4.66,4.66,0,0,0-4.66,4.66v35.27a4.66,4.66,0,0,0,4.66,4.66h62.45l-.89,105H25.14ZM439.81,405.48a7.81,7.81,0,1,0-8.24,8.23L420.27,425a7.83,7.83,0,0,0-13.17,5.71,7.76,7.76,0,0,0,2.16,5.31l-10.64,10.63a7.67,7.67,0,0,0-5.49,5.49L370.3,475l.11-13.35a7.62,7.62,0,0,0,.13-15.09l.63-74,100.66.89Z"/>
+      <path class="cls-2" d="M383.51,392.26a7.81,7.81,0,1,0-7.85-7.8A7.82,7.82,0,0,0,383.51,392.26Z"/>
+      <path class="cls-2" d="M415,392.26a7.81,7.81,0,1,0-7.87-7.8A7.83,7.83,0,0,0,415,392.26Z"/>
+      <path class="cls-2" d="M446.41,392.26a7.81,7.81,0,1,0-7.86-7.8A7.83,7.83,0,0,0,446.41,392.26Z"/>
+      <path class="cls-2" d="M400.62,413.82a7.81,7.81,0,1,0-7.87-7.8A7.84,7.84,0,0,0,400.62,413.82Z"/>
+      <path class="cls-2" d="M383.51,438.52a7.81,7.81,0,1,0-7.85-7.8A7.82,7.82,0,0,0,383.51,438.52Z"/>
+    </g>
+  </g>
+</svg>
+<span>Kalender</span></a></li>
+			<li><a href="#home"><svg id="phone" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+  <defs>
+    <style>
+      .cls-1 {
+        fill: #fff;
+      }
 
-	<p>Embed</p>
-	<embed src="example.svg" type="image/svg+xml">
-
-	<p>IFrame</p>
-	<iframe src="example.svg"></iframe>
-
-	<p>Inline</p>
-	<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 254.45 548.81">
-		<defs>
-			<style>
-				.cls-1 {
-					isolation: isolate;
-				}
-
-				.cls-2 {
-					fill: #8c4e31;
-				}
-
-				.cls-3 {
-					fill: #a45d3b;
-				}
-
-				.cls-4 {
-					fill: #c68277;
-					opacity: 0.67;
-				}
-
-				.cls-12,
-				.cls-15,
-				.cls-4 {
-					mix-blend-mode: darken;
-				}
-
-				.cls-5 {
-					fill: #f9b1a2;
-				}
-
-				.cls-10,
-				.cls-16,
-				.cls-17,
-				.cls-18,
-				.cls-6 {
-					fill: none;
-				}
-
-				.cls-6 {
-					stroke: #c68277;
-				}
-
-				.cls-16,
-				.cls-17,
-				.cls-18,
-				.cls-6 {
-					stroke-miterlimit: 10;
-				}
-
-				.cls-14,
-				.cls-7 {
-					fill: #c6c5c5;
-				}
-
-				.cls-7 {
-					opacity: 0.47;
-					mix-blend-mode: lighten;
-				}
-
-				.cls-8 {
-					fill: #a55c3b;
-				}
-
-				.cls-9 {
-					fill: #b6b6b7;
-				}
-
-				.cls-11 {
-					fill: #2e3192;
-				}
-
-				.cls-12 {
-					fill: #262262;
-					opacity: 0.72;
-				}
-
-				.cls-13 {
-					fill: #3c1d15;
-				}
-
-				.cls-16 {
-					stroke: #3c1d15;
-					stroke-width: 2px;
-				}
-
-				.cls-17,
-				.cls-18 {
-					stroke: #d17b6d;
-					stroke-linecap: round;
-				}
-
-				.cls-17 {
-					stroke-width: 3px;
-				}
-
-				.cls-18 {
-					stroke-width: 1.81px;
-				}
-			</style>
-		</defs>
-		<title>example</title>
-		<g class="cls-1">
-			<g id="Layer_1" data-name="Layer 1">
-				<path id="legs" class="cls-2" d="M67.53,381.37H186.9c10.13,50.35,9.15,101.27-.27,156.77h-52c-4.29-29.16-6.22-66.7-7.14-107.87.3,42.36-1,81.79-9.56,107.87H67.53c-7.61-52.23-7.23-104.49,0-156.77"
-				 transform="translate(0)" />
-				<path id="shoel" class="cls-3" d="M124,535.31c0-16-13.7-28.94-30.6-28.94s-30.59,13-30.59,28.94a27.58,27.58,0,0,0,3.53,13.5h54.12A27.59,27.59,0,0,0,124,535.31Z"
-				 transform="translate(0)" />
-				<path id="shoer" class="cls-3" d="M191.38,535.31c0-16-13.7-28.94-30.6-28.94s-30.59,13-30.59,28.94a27.58,27.58,0,0,0,3.53,13.5h54.12A27.59,27.59,0,0,0,191.38,535.31Z"
-				 transform="translate(0)" />
-				<g id="body">
-					<g id="handl">
-						<circle class="cls-4" cx="53.72" cy="380.37" r="24.29" />
-						<circle class="cls-5" cx="52.72" cy="379.37" r="24.29" />
-						<circle class="cls-6" cx="57.74" cy="374.36" r="19.28" />
-					</g>
-					<g id="handr">
-						<circle class="cls-4" cx="206.76" cy="380.37" r="24.29" />
-						<circle class="cls-5" cx="205.76" cy="379.37" r="24.29" />
-						<circle class="cls-6" cx="202.74" cy="374.36" r="19.28" />
-					</g>
-					<path class="cls-7" d="M125,181.15c0,41.74,40.8,30.21,51,26.69-4.75-10.69-10.07-21.76-15.89-33.43l-1.26-.34H93.39a331.1,331.1,0,0,0-17.13,34.47C85.72,211.71,125,222.37,125,181.15Z"
-					 transform="translate(0)" />
-					<path class="cls-8" d="M89.84,174.07h65.43c90.66,22,113.08,164.39,91.66,194.39s-60.34,7.05-60.34,7.05-18.24,65.23-20.66,65.23-46-58.67-46-58.67c-16.64,31.9-16.52,31.83-27.33,56-9.33,0-28.67-59.33-28.67-59.33s-22,18-44,5.33S-31.49,222.74,89.84,174.07Z"
-					 transform="translate(0)" />
-					<path class="cls-9" d="M158.18,174.39l-1.19-.32H95.2C66.41,224.8,48.14,283.77,65.6,378.78l.05,0S85,438.07,94.32,438.07c11.33-25.33,27.33-56,27.33-56s43.59,58.67,46,58.67,20.66-65.23,20.66-65.23l.17.1C209.72,293.12,193.68,245.66,158.18,174.39Z"
-					 transform="translate(0)" />
-					<path class="cls-10" d="M185.07,235.06l-.21.05,0,.09Z" transform="translate(0)" />
-					<path class="cls-11" d="M125.13,177.18l-10.75,28.17a24.09,24.09,0,0,0,21.5-.37Z" transform="translate(0)" />
-					<path class="cls-12" d="M134.9,205c15.9,8.94,7.46,74.13-4,99.23-19.94-26.56-31.19-86-16.92-99.23Z" transform="translate(0)" />
-					<path class="cls-11" d="M134.38,205c15,8.44,7,70-3.79,93.67-18.83-25.08-29.45-81.17-16-93.67Z" transform="translate(0)" />
-					<path class="cls-9" d="M132.61,299.56c-6.53,20.48-11,47.34-11,82.53C135,346.88,136.88,320,132.61,299.56Z"
-					 transform="translate(0)" />
-					<path class="cls-13" d="M184.9,235.2a125.12,125.12,0,0,1-26.51,18.49,8,8,0,0,0-2.47,1.9c-8.3,9.64-16.83,23.66-23.31,44-10.15,19.25-11.65,47.08-11,82.53,0-35.19,4.44-62,11-82.53a77.2,77.2,0,0,0-18.54-36.91,7.81,7.81,0,0,0-4-2.39C96.28,257,82.4,249.26,68.33,237c-10.64,37.83-13.56,82.88-2.73,141.8l.05,0S85,438.14,94.32,438.14c11.33-25.34,27.33-56,27.33-56s43.59,58.66,46,58.66,20.66-65.23,20.66-65.23l.17.1C203.19,318.57,200,278.25,184.9,235.2Z"
-					 transform="translate(0)" />
-					<path class="cls-8" d="M68.4,236.75c-10.7,37.88-13.65,83-2.8,142l.05,0S85,438.07,94.32,438.07c5.15-11.52,11.27-24.13,16.41-34.47C117.68,349.35,106.54,293.93,68.4,236.75Z"
-					 transform="translate(0)" />
-					<path class="cls-8" d="M184.9,235.13c-51.85,51.87-51.35,114-39.41,178.56,10.62,13.87,21,27.05,22.16,27.05,2.42,0,20.66-65.23,20.66-65.23l.17.1C203.19,318.5,200,278.18,184.9,235.13Z"
-					 transform="translate(0)" />
-					<path class="cls-14" d="M125,180.76c0,39.44,38.55,28.54,48.15,25.22-4.49-10.11-9.52-20.56-15-31.59l-1.19-.32H95.2A313.29,313.29,0,0,0,79,206.63C88,209.63,125,219.7,125,180.76Z"
-					 transform="translate(0)" />
-					<g class="cls-15">
-						<path class="cls-16" d="M188.48,375.61c14.71-57.11,11.53-97.43-3.58-140.48" transform="translate(0)" />
-						<path class="cls-16" d="M68.4,236.75c-10.7,37.88-13.65,83-2.8,142" transform="translate(0)" />
-					</g>
-				</g>
-				<g id="face">
-					<g id="skin">
-						<rect class="cls-5" x="58.61" y="28.39" width="130.85" height="160.37" rx="61.63" ry="61.63" />
-					</g>
-					<path class="cls-17" d="M123,110s-13.16,21.33-10.5,27,6.34,6.16,10.5,6.16" transform="translate(0)" />
-					<g id="moustache">
-						<path class="cls-13" d="M125.27,157.59a4.75,4.75,0,0,1-2.69-4.25c0-3.37,1.51-8.1,11-6.78,14.37,2,25.47,5.92,32,1.87,8.59-5.29-8.13,12-23,11.63C131.39,159.77,127.77,158.77,125.27,157.59Z"
-						 transform="translate(0)" />
-						<path class="cls-13" d="M113.84,157.59a4.75,4.75,0,0,0,2.69-4.25c0-3.37-1.51-8.1-11-6.78-14.37,2-25.46,5.92-32,1.87-8.59-5.29,8.14,12,23,11.63C107.72,159.77,111.35,158.77,113.84,157.59Z"
-						 transform="translate(0)" />
-					</g>
-					<line id="mouth" class="cls-17" x1="105.96" y1="166.31" x2="130.31" y2="166.31" />
-					<line id="chin" class="cls-18" x1="113.7" y1="182.51" x2="122.58" y2="182.51" />
-					<g id="eyel">
-						<circle class="cls-13" cx="100.87" cy="116.98" r="5.41" />
-						<path class="cls-16" d="M101.32,112.59c-7.58-3.36-21.2-2.85-25.86.39" transform="translate(0)" />
-					</g>
-					<g id="eyer">
-						<circle class="cls-13" cx="139.88" cy="116.61" r="5.41" />
-						<path class="cls-16" d="M139.43,112.22c7.57-3.35,21.2-2.84,25.86.39" transform="translate(0)" />
-					</g>
-				</g>
-				<path id="hat" class="cls-13" d="M216,75.16c-6.88.61-13.72,1.13-20.53,1.61V67.31A67.51,67.51,0,0,0,128.18,0H119.9A67.51,67.51,0,0,0,52.59,67.31V77q-10.33-.78-20.49-1.79a4,4,0,0,0-.79,8c28.81,2.89,58.81,4.33,89.8,4.33S184,86,216.72,83.13a4,4,0,1,0-.7-8Z"
-				 transform="translate(0)" />
-			</g>
-		</g>
-	</svg>
-
-
-	<div>A nice little div</div>
-	<style>
-		div {
-			font-size: 4em;
-			color: blue;
-			background-image: url('example.svg');
-		}
-	</style>
-
+      .cls-2 {
+        fill: #030304;
+      }
+    </style>
+  </defs>
+  <title>phone</title>
+  <g>
+    <path class="cls-1" d="M43.34,369.1A26.08,26.08,0,0,1,35.85,333L239.17,23.38a26.09,26.09,0,0,1,36.14-7.48l193.38,127A26.09,26.09,0,0,1,476.17,179L272.86,488.62a26.09,26.09,0,0,1-36.14,7.48Z"/>
+    <g>
+      <path class="cls-2" d="M474.49,134.07,281.1,7.08a36.61,36.61,0,0,0-50.75,10.51L27,327.18a36.65,36.65,0,0,0,10.51,50.74l193.39,127a36.61,36.61,0,0,0,50.75-10.51L485,184.81A36.69,36.69,0,0,0,474.49,134.07Zm-7.14,39.16L264,482.82a15.88,15.88,0,0,1-21.52,4.46l-193.39-127a15.53,15.53,0,0,1-4.46-21.51L248,29.17a15.52,15.52,0,0,1,21.52-4.45l193.39,127A15.55,15.55,0,0,1,467.35,173.23Z"/>
+      <polygon class="cls-2" points="94.88 320.22 261.09 429.36 431.37 170.09 265.19 60.94 94.88 320.22"/>
+      <path class="cls-2" d="M170.79,385.76a15,15,0,1,0,4.32,20.82A15,15,0,0,0,170.79,385.76Z"/>
+    </g>
+  </g>
+</svg>
+<span>Contact</span></a></li>
+		</ul>
+	</nav>
 </body>
-
 </html>
